# sithub

./: .gitignore  00_项目枢纽.md  01_SIT_项目框架.md  02_SIT_项目说明与进展.md  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README_zh.md  SECURITY.md  demo.html  pyproject.toml  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/assets/: sit-case-showcase.html
.github/workflows/: binary-release.yml  ci.yml  release.yml
docs/: binary-distribution.md  cli-command-guide.md  proposal.md  quickstart-existing-skill.md  walkthrough.md
docs/history/: 2026-05-处理记录.md
docs/internal/: 00_项目枢纽.md  02_SIT_项目说明与进展.md  skill git.md
docs/pilots/: paper-webpage-builder.md
docs/research/: proposal.md  sit-multi-agent-mapping.md
docs/schemas/: sit-deps-v1.schema.json  sit-diff-v1.schema.json  sit-doctor-v1.schema.json  sit-info-v1.schema.json  sit-pr-summary-v1.schema.json  sit-review-v1.schema.json  sit.info.v1.md  sit.pr-summary.v1.md  sit.report.v1.md  sit.test.v1.md
examples/paper-taxonomy-mapper-v0.1.0/: skill.yaml
examples/paper-taxonomy-mapper-v0.1.0/prompts/: classify.md
examples/paper-taxonomy-mapper-v0.1.0/schemas/: output.schema.json
examples/paper-taxonomy-mapper-v0.1.0/tests/: golden.jsonl
examples/paper-taxonomy-mapper-v0.2.0/: skill.yaml
examples/paper-taxonomy-mapper-v0.2.0/prompts/: classify.md
examples/paper-taxonomy-mapper-v0.2.0/reports/: diff-v0.1.0-to-v0.2.0.md  visual-v0.1.0-to-v0.2.0.html
examples/paper-taxonomy-mapper-v0.2.0/reports/ci-v0.13.0/: sit-report.html  sit-report.json  sit-report.md  sit-summary.md
examples/paper-taxonomy-mapper-v0.2.0/schemas/: output.schema.json
examples/paper-taxonomy-mapper-v0.2.0/tests/: golden.jsonl
examples/quickstart/: README.md
examples/quickstart/hello-skill/: skill.yaml
examples/quickstart/hello-skill/prompts/: system.md
examples/quickstart/hello-skill/schemas/: input.schema.json  output.schema.json
examples/quickstart/hello-skill/tests/: golden.jsonl
experiments/: README.md  driver.py
experiments/reports/h2-regression-recovery/: h2-regression-recovery.md
scripts/: build_binary.py
sit/: __init__.py  agent_config.py  ci.py  cli.py  cli_git.py  cli_render.py  deps.py  diff.py  doctor.py  errors.py  gate.py  git.py  info.py  init.py  mcp_handler.py  mcp_server.py  onboard.py  package.py  ref.py  release.py  report.py  review.py  script_summary.py  sdk.py  snapshot.py  summary.py  tool_use.py  validate.py
tests/: README.md  test_agent_contracts.py  test_cli.py  test_experiments.py
vscode-extension/: README.md  package-lock.json  package.json
vscode-extension/src/: extension.ts
