[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sit-toolkit"
version = "0.19.0"
description = "Skill Iteration Toolkit CLI for semantic validation and testing of Skill Packages."
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=5.4",
  "jsonschema>=4.0",
]

[project.optional-dependencies]
binary = [
  "pyinstaller>=6.0",
]

[project.scripts]
sit = "sit.cli:main"

[tool.setuptools]
packages = ["sit"]
