[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sit-toolkit"
version = "0.22.0"
description = "Git-native CLI for versioning AI Skill packages: prompts, schemas, golden tests, and release artifacts."
requires-python = ">=3.10"
license = "Apache-2.0"
readme = "README.md"
authors = [
  { name = "OpenRaiser", email = "xuxinglong00423@163.com" },
]
keywords = ["ai", "skills", "prompt-engineering", "version-control", "cli", "llm"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Version Control :: Git",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "PyYAML>=5.4,<7",
  "jsonschema>=4.0,<5",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0,<9",
  "ruff>=0.8.0,<1",
  "mypy>=1.10,<2",
  "types-PyYAML>=6.0,<7",
  "build>=1.0,<2",
  "twine>=4.0,<7",
]
binary = [
  "pyinstaller>=6.0,<7",
]
mcp = [
  "mcp>=1.0,<2",
]

[project.urls]
Homepage = "https://github.com/OpenRaiser/Sit"
Documentation = "https://github.com/OpenRaiser/Sit#readme"
Repository = "https://github.com/OpenRaiser/Sit"
Issues = "https://github.com/OpenRaiser/Sit/issues"

[project.scripts]
sit = "sit.cli:main"
sit-mcp-server = "sit.mcp_server:main"

[tool.setuptools.packages.find]
include = ["sit"]

[tool.setuptools.package-data]
sit = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 160

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
files = ["sit"]
ignore_missing_imports = true
check_untyped_defs = false
warn_unused_configs = true
