[metadata]
name = sit-toolkit
version = 0.19.0
description = Skill Iteration Toolkit CLI for semantic validation and testing of Skill Packages.

[options]
packages = sit
python_requires = >=3.10
install_requires =
    PyYAML>=5.4
    jsonschema>=4.0

[options.entry_points]
console_scripts =
    sit = sit.cli:main
